Fix bleed

--- a/styles/print.css
+++ b/styles/print.css
@@ -28,7 +28,7 @@
 			/* Pagination. */
 			.print--break {
 				break-before:       page;
-				margin-block-start: calc(var(--stroke) / 2);
+				margin-block-start: var(--stroke);
 
 				/* Don’t double-up. */
 				> hgroup > .print--break { break-before: initial }
